--- a/kblpp.tex
+++ b/kblpp.tex
@@ -471,7 +471,7 @@ Our multi-iteration path profiling technique introduces a technical shift based 
 
 Maintaining a prefix forest during a program's execution would be too costly: we thus devise an intermediate data structure that supports updates in nearly constant time (i.e., proportional to the degree of the node, which is typically small in practice). As a \ksf\ captures information on all distinct paths of bounded length taken at run time, its space requirements mainly depend on intrinsic structural properties of analyzed programs. To capture even longer paths, our technique might be extended with heuristics aiming at reducing space usage, for instance by periodically pruning branches of the \ksf\ with small frequency counters. Also, it might be integrated with sophisticated sampling techniques for reducing time overhead used in intraprocedural (e.g.,~\cite{Bond05}) and interprocedural (e.g,~\cite{Zhuang06} and Section \missing) profilers.
 
-\noindent As we will see in Section \missing, the key to efficiency of our approach is to replace costly hash table accesses with substantially faster operations on trees. This allows us to profile paths that extend across many loop iterations, while previous techniques do not scale well even for short cyclic paths. Profiling longer paths can reveal interesting optimization opportunities that ``short'' profiles would miss~\cite{Delia13}. In \mysection\ref{se:convolution} we present an optimization case study on masked convolution filters for image processing: using a \kipf\ profile collected for $k=10$, we devise a selective loop unrolling optimization resulting in non-negligible speedups on all of our tests.
+\noindent As we will see in Section \missing, the key to efficiency of our approach is to replace costly hash table accesses with substantially faster operations on trees. This allows us to profile paths that extend across many loop iterations, while previous techniques do not scale well even for short cyclic paths. Profiling longer paths can reveal interesting optimization opportunities that ``short'' profiles would miss~\cite{Delia13}. In \missing\ we present an optimization case study on masked convolution filters for image processing: using a \kipf\ profile collected for $k=10$, we devise a selective loop unrolling optimization resulting in non-negligible speedups on all of our tests.
 
 
 %The space required to maintain the \ksf depends on intrin
