feval case study

--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -698,6 +698,17 @@
   doi = {10.1109/MICRO.1998.742774}
 }
 
+@phdthesis{Young98thesis,
+  author = {Young, Reginald Clifford},
+  advisor = {Smith, Michael D. and Martin, Paul C.},
+  title = {{Path-based Compilation}},
+  year = {1998},
+  isbn = {0-591-74986-6},
+  note = {AAI9822933},
+  publisher = {Harvard University},
+  address = {Cambridge, MA, USA}
+}
+
 @inproceedings{Bodik99,
   author = {Bod\'{\i}k, Rastislav and Gupta, Rajiv and Soffa, Mary Lou},
   title = {{Load-Reuse Analysis: Design and Evaluation}},
@@ -1047,6 +1058,24 @@
   keywords = {dynamic optimization, jit compilation, llvm, matlab, mcjit, on-stack replacement}
 }
 
+@inproceedings{Lameed2013b,
+  author = {Lameed, Nurudeen A. and Hendren, Laurie J.},
+  title = {{Optimizing MATLAB Feval with Dynamic Techniques}},
+  booktitle = {Proceedings of the 9th Symposium on Dynamic Languages},
+  series = {DLS '13},
+  year = {2013},
+  isbn = {978-1-4503-2433-5},
+  location = {Indianapolis, Indiana, USA},
+  pages = {85--96},
+  numpages = {12},
+  url = {http://doi.acm.org/10.1145/2508168.2508174},
+  doi = {10.1145/2508168.2508174},
+  acmid = {2508174},
+  publisher = {ACM},
+  address = {New York, NY, USA},
+  keywords = {dynamic optimization, feval, jit compilation, llvm, matlab, mcjit}
+}
+
 @inproceedings{Lattner04,
   author = {Lattner, Chris and Adve, Vikram},
   title = {{LLVM}: A Compilation Framework for Lifelong Program Analysis \& Transformation},
@@ -1337,11 +1366,56 @@
   address = {New York, NY, USA}
 }
 
+@inproceedings{Chevalier2010,
+  author = {Chevalier-Boisvert, Maxime and Hendren, Laurie and Verbrugge, Clark},
+  title = {{Optimizing MATLAB Through Just-in-time Specialization}},
+  booktitle = {Proceedings of the 19th Joint European Conference on Theory and Practice of Software, International Conference on Compiler Construction},
+  series = {CC'10/ETAPS'10},
+  year = {2010},
+  isbn = {3-642-11969-7, 978-3-642-11969-9},
+  location = {Paphos, Cyprus},
+  pages = {46--65},
+  numpages = {20},
+  url = {http://dx.doi.org/10.1007/978-3-642-11970-5_4},
+  doi = {10.1007/978-3-642-11970-5_4},
+  acmid = {2175468},
+  publisher = {Springer-Verlag},
+  address = {Berlin, Heidelberg},
+}
+
+@inproceedings{Radpour2013,
+  author = {Radpour, Soroush and Hendren, Laurie and Sch\"{a}fer, Max},
+  title = {{Refactoring MATLAB}},
+  booktitle = {Proceedings of the 22Nd International Conference on Compiler Construction},
+  series = {CC'13},
+  year = {2013},
+  isbn = {978-3-642-37050-2},
+  location = {Rome, Italy},
+  pages = {224--243},
+  numpages = {20},
+  url = {http://dx.doi.org/10.1007/978-3-642-37051-9_12},
+  doi = {10.1007/978-3-642-37051-9_12},
+  acmid = {2450266},
+  publisher = {Springer-Verlag},
+  address = {Berlin, Heidelberg},
+}
+
+@book{Recktenwald2000,
+  title={Numerical Methods with {MATLAB}: Implementations and Applications},
+  author={Recktenwald, G.W.},
+  isbn={9780201308600},
+  lccn={00042758},
+  series={Featured Titles for Numerical Analysis Series},
+  url={http://books.campusvirtualsp.org/books?id=H\_QeAQAAIAAJ},
+  year={2000},
+  publisher={Prentice Hall}
+}
+
 
 %% MISC (URLs)
 @misc{perf,
   author = {{perf: {Linux} profiling with performance counters}},
-  note = {\url{https://perf.wiki.kernel.org/} Accessed: 2016-02-15}  
+  note = {\url{https://perf.wiki.kernel.org/} Accessed: 2016-02-15}
 }
 
 @misc{PEP,
@@ -1353,5 +1427,17 @@
 @misc{shootout,
   author = {Fulgham, Brent and Gouy, Isaac},
   title = {{The {C}omputer {L}anguage {B}enchmarks {G}ame}},
-  note = {\url{http://benchmarksgame.alioth.debian.org/}. Accessed: 2016-03-25},
+  note = {\url{http://benchmarksgame.alioth.debian.org/}. Accessed: 2016-03-25}
+}
+
+@misc{mcvm,
+  author = {{The McLab project}},
+  title = {{Sable McVM}},
+  note = {\url{https://github.com/Sable/mcvm}. Accessed: 2016-01-13}
+}
+
+@misc{simanl,
+  author = {H\^{e}ctor Corte},
+  title = {{Simulated Annealing Optimization}},
+  note = {\url{http://www.mathworks.com/matlabcentral/fileexchange/33109-simulated-annealing-optimization}. Accessed: 2016-03-26}
 }
