--- a/header.tex
+++ b/header.tex
@@ -92,6 +92,7 @@
 \newcommand{\tinyvm}{{\sf TinyVM}}
 \newcommand{\clang}{{\tt clang}}
 \newcommand{\shootout}{{\tt shootout}}
+\newcommand{\feval}{{\tt feval}}
 \newcommand{\fbase}{$\textsf{f}$}
 \newcommand{\fvariant}{$\textsf{f'}$}
 \newcommand{\fosrfrom}{$\textsf{f}_{\textsf{from}}$}
