--- a/header.tex
+++ b/header.tex
@@ -138,6 +138,11 @@
 \newcommand{\reconstruct}{\mytt{reconstruct}}
 \newcommand{\apply}{\mytt{apply}}
 \newcommand{\dopasses}{\mytt{do\_passes}}
+% misc
+\newcommand{\load}{\mytt{load}}
+\newcommand{\store}{\mytt{store}}
+\newcommand{\RAUW}{\mytt{replace\_all}}
+\newcommand{\RAUWfull}{\mytt{replace\_all}$(O, N)$}
 
 %debugging
 \newcommand{\speccpu}{{\tt SPEC CPU2006}}
