--- a/osr-language.tex
+++ b/osr-language.tex
@@ -1,4 +1,5 @@
 \subsection{Language Syntax and Semantics}
+\label{ss:osr-language-framework}
 Our discussion is based on a minimal imperative programming whose syntax is reported \ifauthorea{below}{in \myfigure\ref{fig:osr-program-syntax}}. In this section we introduce some basic definitions used in our representation of programs, and provide a big-step semantics for the language.
 
 %\subsection{Language Framework}
