--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -1411,6 +1411,25 @@
   publisher={Prentice Hall}
 }
 
+@article{Cytron91,
+  author = {Cytron, Ron and Ferrante, Jeanne and Rosen, Barry K. and Wegman, Mark N. and Zadeck, F. Kenneth},
+  title = {{Efficiently Computing Static Single Assignment Form and the Control Dependence Graph}},
+  journal = {ACM Transactions on Programming Languages and Systems},
+  issue_date = {Oct. 1991},
+  volume = {13},
+  number = {4},
+  month = oct,
+  year = {1991},
+  issn = {0164-0925},
+  pages = {451--490},
+  numpages = {40},
+  doi = {10.1145/115372.115320},
+  acmid = {115320},
+  publisher = {ACM},
+  address = {New York, NY, USA},
+  keywords = {control dependence, control flow graph, def-use chain, dominator, optimizing compilers}
+}
+
 
 %% MISC (URLs)
 @misc{perf,
