--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -1430,6 +1430,25 @@
   keywords = {control dependence, control flow graph, def-use chain, dominator, optimizing compilers}
 }
 
+@article{Henning06,
+  author = {Henning, John L.},
+  title = {{{SPEC} {CPU2006} Benchmark Descriptions}},
+  journal = {SIGARCH Computer Architecture News},
+  issue_date = {September 2006},
+  volume = {34},
+  number = {4},
+  month = sep,
+  year = {2006},
+  issn = {0163-5964},
+  pages = {1--17},
+  numpages = {17},
+  url = {http://doi.acm.org/10.1145/1186736.1186737},
+  doi = {10.1145/1186736.1186737},
+  acmid = {1186737},
+  publisher = {ACM},
+  address = {New York, NY, USA}
+}
+
 
 %% MISC (URLs)
 @misc{perf,
@@ -1437,10 +1456,15 @@
   note = {\url{https://perf.wiki.kernel.org/} Accessed: 2016-02-15}
 }
 
+@misc{Phoronix,
+  author = {{Phoronix Test Suite (PTS)}},
+  note = {\url{http://www.phoronix-test-suite.com/} Accessed: 2016-03-27}
+}
+
 @misc{PEP,
   author = {{Jikes RVM Research Archive}},
   title = {{{PEP}: continuous path and edge profiling}},
-  note = {\url{http://jikesrvm.org/Research+Archive}}
+  note = {\url{http://jikesrvm.org/Research+Archive}. Accessed: 2016-03-27}
 }
 
 @misc{shootout,
