--- a/header.tex
+++ b/header.tex
@@ -5,6 +5,8 @@
 \usepackage{amsfonts,amsmath,amssymb}
 \usepackage{tabularx}
 \usepackage{cprotect}
+\usepackage{multirow}
+\usepackage{adjustbox}
 
 \let\oldnl\nl% Store \nl in \oldnl
 \newcommand{\nonl}{\renewcommand{\nl}{\let\nl\oldnl}}% Remove line number for one line
@@ -146,3 +148,4 @@
 
 %debugging
 \newcommand{\speccpu}{{\tt SPEC CPU2006}}
+\newcommand{\phoronixpts}{{\tt Phoronix PTS}}
